osate scripts and new launcher